# DBIproj

./: .dockerignore  .gitignore  ARCHITECTURE.md  AZURE-DEPLOYMENT-GUIDE.md  Dockerfile  OBSERVABILITY.md  README.md  TROUBLESHOOTING.md  USAGE.md  docker-compose.yml  install.json  main.py  pyproject.toml  requirements.txt  telemetry.py  test_false_missing_doc.py  test_false_negative.py  test_new_endpoint.py  test_true_positive.py
azure-iac-bundle/: README.md
azure-iac-bundle/bicep/: main.bicep  parameters.example.json
azure-iac-bundle/bicep/modules/: acr.bicep  apim.bicep  appinsights.bicep  containerapp.bicep  containerapps-env.bicep  frontdoor.bicep  kv.bicep  loganalytics.bicep  openai-private-endpoint.bicep  vnet.bicep
azure-iac-bundle/terraform/: main.tf  providers.tf  variables.tf
clients/: vlm_client.py
config/: prompts.py
core/: parsers.py  rules_engine.py
ref-code/: qwen.py
schemas/: flight_schema.json  flight_schema.py
test/: test_classifier.py
test/true_positive/: รายงงานเดินทาง.DOC
test_result/: test_false_negative_output.json  test_missing_doc_output.json  test_output.json
workflows/: claim_batch.py  three_tier.py
